--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,6 @@
       </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
