fix inline script CSP error

--- a/public/index.html
+++ b/public/index.html
@@ -53,11 +53,11 @@
           value="50"
           class="slider"
           id="moderation-slider"
-          oninput="this.nextElementSibling.nextElementSibling.children[0].value = this.value"
         />
         <br />
         <span style="font-weight: bold"
-          ><output style="padding-left: 45px">50</output>% </span
+          ><output id="threshold-output" style="padding-left: 45px">50</output
+          >% </span
         >threshold
       </div>
     </div>
